demo/src/main/java/com/example/demo/principle/lsp/negative/CommonConsumer.java
package com.example.demo.principle.lsp.negative;

import lombok.Data;

/**
 * @Author zhangle
 * @CreateTime 2021-12-02 10:56:59
 * @Description
 */
@Data
public class CommonConsumer {
    private String name;
    private String email;

}
